# markeino

./: .env.example  .gitignore  BINANCE_SETUP.md  QUICK_REFERENCE.md  README.md  arb_monitor.py  config.binance.yaml  config.yaml  dex_arb_monitor.py  dex_arb_v4.py  dexes.py  flash_executor.py  main.py  requirements.txt
bot/: __init__.py  config.py  executor.py  indicators.py  logger.py  market_data.py  risk_manager.py  strategy.py  trading_bot.py
contracts/: foundry.toml  remappings.txt
contracts/lib/: .gitignore
contracts/lib/forge-std/src/: Test.sol
contracts/script/: Deploy.s.sol
contracts/src/: ArbitrageExecutor.sol
contracts/test/: ArbitrageExecutor.t.sol
crypto-arb-bot/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crypto-arb-bot/config/: default.toml
crypto-arb-bot/monitoring/: prometheus.yml
crypto-arb-bot/src/: config.rs  lib.rs  main.rs
crypto-arb-bot/src/data/: market_data_collector.rs  mod.rs  types.rs
crypto-arb-bot/src/engine/: arbitrage_detector.rs  mod.rs  pricing_engine.rs
crypto-arb-bot/src/execution/: exchange_connector.rs  mod.rs  order_manager.rs
crypto-arb-bot/src/monitoring/: logger.rs  metrics.rs
crypto-arb-bot/src/risk/: mod.rs  risk_manager.rs
crypto-arb-bot/src/utils/: helpers.rs
crypto-arb-bot/tests/: backtesting.rs
examples/: backtest_example.py  quick_start.py  walrus_trading.py
