[package]
name = "crypto-arb-bot"
version = "0.1.0"
edition = "2021"
authors = ["Crypto Arb Bot"]
description = "Production-grade cryptocurrency arbitrage bot"

[[bin]]
name = "crypto-arb-bot"
path = "src/main.rs"

[lib]
name = "crypto_arb_bot"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Redis cache
redis = { version = "0.24", features = ["tokio-comp", "aio"] }

# Metrics
prometheus = { version = "0.13", features = ["process"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"

# Error handling
anyhow = "1"
thiserror = "1"

# Decimal arithmetic (critical for financial calculations)
rust_decimal = { version = "1", features = ["serde-float"] }
rust_decimal_macros = "1"

# Cryptographic signing for exchange APIs
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

# URL handling
url = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Concurrent data structures
dashmap = "5"

# Async trait support
async-trait = "0.1"

# Lazy static initialization
once_cell = "1"

# HTTP server for metrics endpoint
hyper = { version = "0.14", features = ["full"] }

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Tokio utilities
tokio-util = { version = "0.7", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# "unwind" so panics in spawned tasks are caught and logged rather than
# aborting the whole process (important for background HTTP servers)
panic = "unwind"
